# birdForest

./: CHANGELOG.md  README.md  birdForest.cabal
.metals/: metals.lock.db
app/: Main.hs
src/: Eval.hs  Expr.hs  MyLib.hs  Parser.hs
test/: Main.hs
